@@ -1,5 +1,6 @@
 Version 3.1.x:
 
+* Allow FS_GAMESYS_RUN_DIR to be relative to cwd.
 * Fixes for PyQt5 errors observed on Fedora 35.
 * Removed cacert.pem (should be handled by certifi package now).
 * Launcher settings plugins page did not respect new FS-UAE/System directory.
